crates/swc_fast_ts_strip/tests/errors/modules.ts
module aModuleKeywordNamespace { export const m = 1; }

export module aModuleKeywordExportedNamespace { export const m = 1; }